--- a/moby_dick.html
+++ b/moby_dick.html
@@ -27,7 +27,7 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/cat.jpg">
+      <img src="cat.jpg">
 
     <div>
 
@@ -35,7 +35,7 @@
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
-        <img src="images/cat.jpg" alt="Moby-Dick（白鯨）">
+        <img src="cat.jpg" alt="Moby-Dick（白鯨）">
       </a>
 
       <p>
