--- a/moby_dick.html
+++ b/moby_dick.html
@@ -26,8 +26,7 @@
       </p>
     </div>
 
-    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="cat.jpg">
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg"><img src="images/cat.jpg"></a>
 
     <div>
 
