--- a/moby_dick.html
+++ b/moby_dick.html
@@ -35,6 +35,7 @@
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
         <img src="cat.jpg" alt="Moby-Dick（白鯨）">
+        <img src= "storm_trooper_tagged.jpg">
       </a>
 
       <p>
