--- a/moby_dick.html
+++ b/moby_dick.html
@@ -44,13 +44,15 @@
         <em>Moby-Dick</em></a>（白鯨）』は以下の不滅の一文から始まります。
       </p>
 
-      <blockquote>
+          
+          <blockquote style = font-style: italic; font-size: 20px>
         <p>
-          <span>イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
-          陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。
+          <span style="font-sytle: normal;font-size: 24px;font-weight: bold;
+          ">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
+          陸にいても面白くも何とも style = font-style: italic; font-size: 20pxなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。
           腹の虫がおさまらんときはそうすることにしとる。
         </p>
-      </blockquote>
+      </blockquote >
 
       <p>
         イシュマエルは腹の虫を追い払った後（もちろん本当に<em>内臓</em>を追い払うわけにはいきませんが）、ひたすら
