--- a/moby_dick.html
+++ b/moby_dick.html
@@ -47,9 +47,8 @@
           
           <blockquote style = font-style: italic; font-size: 20px>
         <p>
-          <span style="font-sytle: normal;font-size: 24px;font-weight: bold;
-          ">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
-          陸にいても面白くも何とも style = font-style: italic; font-size: 20pxなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。
+          <span style="font-sytle: normal;font-size: 24px;font-weight: bold;color: #ff0000;">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
+          陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。
           腹の虫がおさまらんときはそうすることにしとる。
         </p>
       </blockquote >
