--- a/moby_dick.html
+++ b/moby_dick.html
@@ -34,7 +34,7 @@
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
-        <img src="cat.jpg" alt="Moby-Dick（白鯨）">
+        <img src="cat.jpg" alt="Moby-Dick（白鯨）" style="height: 200px;float: left;">
         <img src= "storm_trooper_tagged.jpg">
       </a>
 
